Added pom for jococo